[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uup-dump-api-py"
version = "0.1.5"
description = "Python Wrapper of UUP Dump API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Cairnstew/uup-dump-api-py"
Issues = "https://github.com/Cairnstew/uup-dump-api-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["uup_dump_api*"]

[dependency-groups]
dev = [
    "bandit>=1.7.5",
    "black>=26.1.0",
    "build>=1.4.0",
    "coverage[toml]>=7.3.0",
    "flake8>=6.1.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.15.1",
    "safety>=2.3.5",
    "types-requests>=2.31.0",
]
